front-end/service.yml
apiVersion: v1
kind: Service
metadata:
  name: i-notes
spec:
  type: NodePort
  ports:
  - name: http
    port: 80
    targetPort: 3001
    protocol: TCP
  selector:
    app: i-notes
