front-end/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-wildcard-host
spec:
  rules:
  - host: "tanxfi.com"
    http:
      paths:
      - pathType: Prefix
        path: "/assignment"
        backend:
          service:
            name: i-notes
            port:
              number: 3001
